<resources>
    <string name="app_name">PizzaMira</string>
    <!--Titles for Bottom NavBar -->
    <string name="nav_title_home">Главная</string>
    <string name="nav_title_notifications">Notifications</string>
    <string name="nav_title_dashboard">Dashboard</string>
    <string name="nav_title_food_menu">Меню</string>
    <string name="nav_title_cart">Корзина</string>
    <string name="nav_title_account">Профиль</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="enter_another_phone"><u>Ввести другой номер телефона</u></string>
    <string name="enter_phone_label">Введите свой номер телефона</string>
    <string name="login_button">Войти</string>
    <string name="resend_code"><u>Не получили код?</u></string>
    <string name="enter_code_button">Продолжить</string>
    <string name="empty_cart_message">Ваша корзина пуста :(</string>
    <string name="no_internet_message">Похоже, что вы не подключены к сети. Проверьте соединение, а затем повторите попытку</string>
    <string name="no_internet_button">Повторить</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_order">OrderActivity</string>
    <string name="label_add_address">Адрес доставки</string>
    <string name="button_address_login">Войдите в свою учетную запись, чтобы сохранить адрес</string>
    <string name="label_city">Город</string>
    <string name="label_contact_info">Контактная информация</string>
    <string name="label_payment">Оплата заказа</string>
    <string name="label_order_details">Детали заказа</string>
    <string name="label_order_confirmation">Подтверждение заказа</string>
    <string name="order_sent_message">Мы приняли Ваш заказ и уже его готовим. В течении 15-ти минут с вами свяжется наш оператор для уточнения деталей и подтверждения заказа. Если этого не произошло - свяжитесь с нами по номеру +7 000 000 00 00</string>
    <string name="order_sent_header">Ваш заказ отправлен</string>
    <string name="button_goto_order_status">Понятно</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>