<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.allteran.pizzamira.ui.home.HomeFragment"
        android:label="@string/nav_title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_menu"
        android:name="com.allteran.pizzamira.ui.menu.MenuFragment"
        android:label="@string/nav_title_food_menu"
        tools:layout="@layout/fragment_menu" />
    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.allteran.pizzamira.ui.cart.CartFragment"
        android:label="@string/nav_title_cart"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.allteran.pizzamira.ui.account.AccountFragment"
        android:label="@string/nav_title_account"
        tools:layout="@layout/fragment_account" />
</navigation>